--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       crossorigin=""
     />
 
-    <title>Mapty | Map Your Workouts</title>
+    <title>Mapty - Map Your Workouts</title>
   </head>
   <body>
     <div id="root"></div>
